src/objects/SAE_FACETS_MACESS__mdt.object
<CustomObject>
    <description>US2584790

Used to map TTS values to FACETS Subject/Category and MACESS (tbd)</description>
    <fields>
        <fullName>FACETS_Category_Code__c</fullName>
        <label>FACETS Category  Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FACETS_Category__c</fullName>
        <description>Value that will be added to FACETS field based on TTS</description>
        <label>FACETS Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FACETS_Subject_Code__c</fullName>
        <label>FACETS Subject Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FACETS_Subject__c</fullName>
        <description>Value that will be added to FACETS field based on TTS</description>
        <label>FACETS Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>Subtype from ACET case</description>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Topic from ACET case</description>
        <label>Topic</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type from ACET case</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SAE FACETS/MACESS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Topic__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>FACETS_Subject__c</columns>
        <columns>FACETS_Category__c</columns>
        <columns>FACETS_Subject_Code__c</columns>
        <columns>FACETS_Category_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SAE FACETS/MACESS</pluralLabel>
</CustomObject>